--- a/core/locales/src/main/res/values/strings.xml
+++ b/core/locales/src/main/res/values/strings.xml
@@ -102,4 +102,5 @@
     <string name="app_update_downloaded">Update is downloaded</string>
     <string name="update">Update</string>
     <string name="install">Install</string>
+    <string name="time">Time</string>
 </resources>
