--- a/core/locales/src/main/res/values-ru/strings.xml
+++ b/core/locales/src/main/res/values-ru/strings.xml
@@ -102,4 +102,5 @@
   <string name="app_update_downloaded">Обновление загружено</string>
   <string name="update">Обновить</string>
   <string name="install">Установить</string>
+  <string name="language">Язык</string>
 </resources>
