--- a/core/locales/src/main/res/values-it/strings.xml
+++ b/core/locales/src/main/res/values-it/strings.xml
@@ -102,4 +102,6 @@
     <string name="app_update_downloaded">Aggiornamento scaricato</string>
     <string name="update">Aggiorna</string>
     <string name="install">Installa</string>
+    <string name="time">Ora</string>
+    <string name="language">Lingua</string>
 </resources>
