--- a/core/locales/src/main/res/values-ta/strings.xml
+++ b/core/locales/src/main/res/values-ta/strings.xml
@@ -102,4 +102,6 @@
     <string name="app_update_downloaded">புதுப்பிப்பு பதிவிறக்கப்பட்டது</string>
     <string name="update">புதுப்பிக்க</string>
     <string name="install">நிறுவ</string>
+    <string name="time">நேரம்</string>
+    <string name="language">மொழி</string>
 </resources>
