Implement data backup and restore
Adds functionality to export and import application data through zip files in the settings screen.
- Adds `backup_and_restore` section to settings screen with `backup` and `restore` actions
- Updates `strings.xml` with new strings for `backup` and `restore` actions

--- a/core/locales/src/main/res/values-ru/strings.xml
+++ b/core/locales/src/main/res/values-ru/strings.xml
@@ -104,4 +104,9 @@
     <string name="install">Установить</string>
     <string name="time">Время</string>
     <string name="language">Язык</string>
+    <string name="backup_and_restore">Резервное копирование и восстановление</string>
+    <string name="backup">Резервное копирование</string>
+    <string name="backup_description">Экспорт всех данных в файл</string>
+    <string name="restore">Восстановление</string>
+    <string name="restore_description">Импорт данных из файла резервной копии</string>
 </resources>
