--- a/core/locales/src/main/res/values-ko/strings.xml
+++ b/core/locales/src/main/res/values-ko/strings.xml
@@ -104,4 +104,9 @@
     <string name="install">설치</string>
     <string name="time">시간</string>
     <string name="language">언어</string>
+    <string name="backup_and_restore">백업 및 복원</string>
+    <string name="backup">백업</string>
+    <string name="backup_description">모든 데이터를 파일로 내보내기</string>
+    <string name="restore">복원</string>
+    <string name="restore_description">백업 파일에서 데이터 가져오기</string>
 </resources>
