--- a/core/locales/src/main/res/values-it/strings.xml
+++ b/core/locales/src/main/res/values-it/strings.xml
@@ -108,4 +108,6 @@
     <string name="backup_description">Esporta tutti i dati in un file</string>
     <string name="restore">Ripristina</string>
     <string name="restore_description">Importa dati da un file di backup</string>
+    <string name="show_total_balance">Mostra saldo totale</string>
+    <string name="show_total_balance_description">Mostra o nascondi la scheda dei fondi totali nella schermata principale</string>
 </resources>
