--- a/core/locales/src/main/res/values-pl/strings.xml
+++ b/core/locales/src/main/res/values-pl/strings.xml
@@ -108,4 +108,6 @@
     <string name="backup_description">Eksportuj wszystkie dane do pliku</string>
     <string name="restore">Przywróć</string>
     <string name="restore_description">Importuj dane z pliku kopii zapasowej</string>
+    <string name="show_total_balance">Pokaż całkowite saldo</string>
+    <string name="show_total_balance_description">Wyświetl lub ukryj kartę całkowitych środków na ekranie głównym</string>
 </resources>
