--- a/core/locales/src/main/res/values-de/strings.xml
+++ b/core/locales/src/main/res/values-de/strings.xml
@@ -108,4 +108,6 @@
     <string name="backup_description">Alle Daten in eine Datei exportieren</string>
     <string name="restore">Wiederherstellen</string>
     <string name="restore_description">Daten aus einer Sicherungsdatei importieren</string>
+    <string name="show_total_balance">Gesamtsaldo anzeigen</string>
+    <string name="show_total_balance_description">Gesamtbetragskarte auf dem Startbildschirm ein- oder ausblenden</string>
 </resources>
