--- a/core/locales/src/main/res/values-fr/strings.xml
+++ b/core/locales/src/main/res/values-fr/strings.xml
@@ -108,4 +108,6 @@
     <string name="backup_description">Exporter toutes les données dans un fichier</string>
     <string name="restore">Restaurer</string>
     <string name="restore_description">Importer des données depuis un fichier de sauvegarde</string>
+    <string name="show_total_balance">Afficher le solde total</string>
+    <string name="show_total_balance_description">Afficher ou masquer la carte du total des fonds sur l\'écran d\'accueil</string>
 </resources>
