--- a/core/locales/src/main/res/values-ko/strings.xml
+++ b/core/locales/src/main/res/values-ko/strings.xml
@@ -108,4 +108,6 @@
     <string name="backup_description">모든 데이터를 파일로 내보내기</string>
     <string name="restore">복원</string>
     <string name="restore_description">백업 파일에서 데이터 가져오기</string>
+    <string name="show_total_balance">총 잔액 표시</string>
+    <string name="show_total_balance_description">홈 화면에 총 자금 카드 표시 또는 숨기기</string>
 </resources>
