--- a/core/locales/src/main/res/values/strings.xml
+++ b/core/locales/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name" translatable="false">Cash Sense</string>
+
     <string name="currency">Currency</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
