--- a/core/locales/src/main/res/values/strings.xml
+++ b/core/locales/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="app_name" translatable="false">Cash Sense</string>
 
+    <string name="close">Close</string>
     <string name="currency">Currency</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
