Simplify financial health content description
This commit simplifies the financial health component by using a single, generic content description string instead of five separate ones for each state.

- Removed specific string resources for "very bad", "bad", "neutral", "good", and "very good" financial health states from all locale files.
- Added a single `financial_health` string resource to serve as the content description for the financial health icon.
- Updated `TransactionOverviewScreen` to use this unified string resource, reducing redundancy.

--- a/core/locales/src/main/res/values-ru-rRU/strings.xml
+++ b/core/locales/src/main/res/values-ru-rRU/strings.xml
@@ -111,9 +111,5 @@
   <string name="previous_date">Предыдущая дата</string>
   <string name="transaction_deleted">Транзакция удалена</string>
   <string name="transfer_deleted">Перевод удалён</string>
-  <string name="financial_health_very_bad">Очень плохое финансовое состояние</string>
-  <string name="financial_health_bad">Плохое финансовое состояние</string>
-  <string name="financial_health_neutral">Нейтральное финансовое состояние</string>
-  <string name="financial_health_good">Хорошее финансовое состояние</string>
-  <string name="financial_health_very_good">Очень хорошее финансовое состояние</string>
+  <string name="financial_health">Финансовое здоровье</string>
 </resources>
