Notify user about in-progress app updates
This commit introduces a snackbar to inform the user when an app update is actively downloading.

Key changes:
- Added a new `InProgress` state to the `InAppUpdateResult` sealed class.
- Implemented logic to show an indefinite snackbar with the message "Update is downloading…" when the update is in progress.
- Added a new string resource for the in-progress message.

--- a/core/locales/src/main/res/values/strings.xml
+++ b/core/locales/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="amount">Amount</string>
     <string name="app_update_available">New version is available</string>
     <string name="app_update_downloaded">Update is downloaded</string>
+    <string name="app_update_in_progress">Update is downloading…</string>
     <string name="backup">Backup</string>
     <string name="backup_and_restore">Backup &amp; restore</string>
     <string name="backup_description">Export all data to a file</string>
