Add a delete dialog

--- a/core/locales/src/main/res/values/strings.xml
+++ b/core/locales/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="ok">OK</string>
     <string name="payment_date">Payment date</string>
     <string name="pending">Pending</string>
+    <string name="permanently_delete">Permanently delete?</string>
     <string name="previous_date">Previous date</string>
     <string name="primary">Primary</string>
     <string name="primary_icon_description">Make primary</string>
@@ -82,8 +83,6 @@
     <string name="settings_appearance">Appearance</string>
     <string name="settings_general">General</string>
     <string name="settings_title">Settings</string>
-    <string name="show_less">show less</string>
-    <string name="show_more">show more</string>
     <string name="subscription_deleted">Subscription deleted</string>
     <string name="subscriptions_empty">Nothing in Subscriptions</string>
     <string name="subscriptions_notification_channel_description">Reminders of expiring subscriptions</string>
