--- a/core/locales/src/main/res/values/strings.xml
+++ b/core/locales/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="restore">Restore</string>
     <string name="restore_description">Import data from a backup file</string>
     <string name="save">Save</string>
+    <string name="search">Search</string>
     <string name="select_wallet">Select a Wallet</string>
     <string name="settings_appearance">Appearance</string>
     <string name="settings_general">General</string>
