--- a/core/locales/src/main/res/values/strings.xml
+++ b/core/locales/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
     <string name="toggle_menu">Toggle menu</string>
     <string name="total_balance">Total balance</string>
     <string name="transaction_ignore">Ignore in calculations</string>
+    <string name="transaction_ignored">Ignored</string>
     <string name="transaction_shortcut_long_label">Add a new transaction</string>
     <string name="transfer">Transfer</string>
     <string name="transfers">Transfers</string>
