Add deletion dialog

--- a/core/locales/src/main/res/values/strings.xml
+++ b/core/locales/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="currency_not_found">Currency not found</string>
     <string name="date">Date</string>
     <string name="delete">Delete</string>
+    <string name="delete_subscription">Delete subscription?</string>
     <string name="delete_transaction">Delete transaction?</string>
     <string name="delete_wallet">Delete wallet?</string>
     <string name="description">Description</string>
@@ -63,6 +64,7 @@
     <string name="ok">OK</string>
     <string name="payment_date">Payment date</string>
     <string name="pending">Pending</string>
+    <string name="permanently_delete_subscription">This subscription will be permanently removed from your device</string>
     <string name="permanently_delete_transaction">This transaction will be permanently removed from your device</string>
     <string name="permanently_delete_wallet">This wallet will be permanently removed from your device</string>
     <string name="previous_date">Previous date</string>
