Refactor toggle buttons and add subscription interval options
- Replace `@StringRes titleRes: Int` with `title: String` in `CsTonalToggleButton` and `CsConnectedButtonGroup` for more flexible text handling.
- Rename `Animated.kt` to `AnimatedIcon.kt` for clarity.
- Allow `AnimatedIcon` to handle `null` icons gracefully to prevent crashes.
- Add an `enabled` parameter to `CsTonalToggleButton` and `CsConnectedButtonGroup`.
- Introduce a new "By date" / "Every 30 days" toggle for monthly subscription reminders, allowing users to choose between fixed-date and interval-based notifications.

--- a/core/locales/src/main/res/values/strings.xml
+++ b/core/locales/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="backup">Backup</string>
     <string name="backup_and_restore">Backup &amp; restore</string>
     <string name="backup_description">Export all data to a file</string>
+    <string name="by_date">By date</string>
     <string name="cancel">Cancel</string>
     <string name="categories_empty">Nothing in Categories</string>
     <string name="categories_title">Categories</string>
